# InfraHealthProbe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: project-plan.md  reference-gstack-analysis.md
endpoint/: README.md
infra/: __main__.py  cli.py  config.py  runner.py  scheduler.py
infra/analytics/: hints.py  scoring.py  summary.py
infra/inventory/: local_csv.py
infra/output/: csv_writer.py  html_report.py  json_writer.py  manifest.py
infra/probes/: __init__.py  base.py  dns.py  http.py  ping.py  ssh.py  tcp.py  wifi_adapter.py
inventory/: targets.example.json
platform/analytics/: verdict.py
platform/inventory/: core.py  local_json.py
platform/probes/: dns.py  ping.py
profiles/: default.json
schemas/: target.schema.json
tests/: test_analytics.py  test_config.py  test_inventory.py  test_output.py  test_probes.py  test_runner.py
