[project]
name = "infrahealthprobe"
version = "0.1.0"
description = "Infrastructure health detection platform - inventory-driven probe engine for server, network, and service monitoring"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
sharepoint = ["msal>=1.28", "httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
